@@ -15,12 +15,14 @@
  */
 package com.pavlovmedia.oss.jaxrs.publisher.impl;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -36,13 +38,10 @@ import javax.ws.rs.core.Application;
 import javax.ws.rs.core.Feature;
 import javax.ws.rs.ext.Provider;
 
-import org.apache.felix.scr.annotations.Activate;
-import org.apache.felix.scr.annotations.Component;
-import org.apache.felix.scr.annotations.Deactivate;
-import org.apache.felix.scr.annotations.Properties;
-import org.apache.felix.scr.annotations.Property;
-import org.apache.felix.scr.annotations.Reference;
-import org.apache.felix.scr.annotations.Service;
+import org.osgi.service.component.annotations.Activate;
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Deactivate;
+import org.osgi.service.component.annotations.Reference;
 import org.glassfish.jersey.media.sse.SseFeature;
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.server.ServerProperties;
@@ -55,11 +54,13 @@ import org.osgi.framework.ServiceRegistration;
 import org.osgi.service.component.ComponentFactory;
 import org.osgi.service.http.HttpService;
 import org.osgi.service.http.NamespaceException;
-import org.osgi.service.log.LogService;
-
+import org.osgi.service.log.Logger;
+import org.osgi.service.log.LoggerFactory;
+import org.osgi.service.metatype.annotations.Designate;
 import com.pavlovmedia.osgi.oss.utilities.api.component.ComponentHolder;
 import com.pavlovmedia.oss.jaxrs.publisher.api.EndpointInfo;
 import com.pavlovmedia.oss.jaxrs.publisher.api.Publisher;
+import com.pavlovmedia.oss.jaxrs.publisher.impl.config.PublisherConfig;
 import com.pavlovmedia.oss.jaxrs.publisher.impl.swagger.SwaggerEndpoint;
 
 /**
@@ -70,21 +71,20 @@ import com.pavlovmedia.oss.jaxrs.publisher.impl.swagger.SwaggerEndpoint;
  * @author Shawn Dempsay {@literal <sdempsay@pavlovmedia.com>}
  *
  */
-@Component(metatype=true, immediate=true)
-@Service
-@Properties({
-    // Don't scan this class or we will get a dependency cycle
-    @Property(name = Publisher.SCAN_IGNORE, value = "true", propertyPrivate=true),
-    @Property(name="com.eclipsesource.jaxrs.publish", boolValue=false, propertyPrivate=true),
-    @Property(name = JerseyPublisher.PATH, label = "JAX-RS Path",
-            description = "Path to serve JAX-RS endpoints from",
-            value = "/services"),
-})
+@Component(immediate=true,
+    //OSGi properties that do not require editing via the ConfigMgr by declaring them in this property array.
+    property= {
+        Publisher.SCAN_IGNORE + "=true",
+        "com.eclipsesource.jaxrs.publish=false"
+    })
+// With @Designate, mark this OSGi service as taking the Configuration class as the config to be passed into @Activate, @Deactivate and @Modified methods
+@Designate(ocd = PublisherConfig.class)
 public class JerseyPublisher extends Application implements Publisher {
     public static final String PATH = "path";
     public static final String INHIBIT_START = "pavlovStackInhibit";
-    @Reference
-    LogService logger;
+    
+    @Reference(service = LoggerFactory.class)
+    Logger logger;
     
     @Reference
     HttpService httpService;
@@ -94,7 +94,7 @@ public class JerseyPublisher extends Application implements Publisher {
      * new services.
      */
     @Reference(target=WidcardServiceTracker.FACTORY_FILTER)
-    ComponentFactory wildcardTrackerFactory;
+    ComponentFactory<WidcardServiceTracker> wildcardTrackerFactory;
     ComponentHolder<WidcardServiceTracker> wildcardTracker = new ComponentHolder<>();
     
     /** Keeps track of people watching for changes */
@@ -123,32 +123,33 @@ public class JerseyPublisher extends Application implements Publisher {
     private final AtomicBoolean initialized = new AtomicBoolean();
     
     /** Used to track the swagger support */
-    private Optional<ServiceReference> swaggerEndpoint = Optional.empty();
+    private Optional<ServiceReference<?>> swaggerEndpoint = Optional.empty();
     
+    @Activate
+    private PublisherConfig config;
     /** 
      * This is a set of features we will try to turn on if they
      * have bundles available
      */
-    ArrayList<ServiceRegistration> featureRegistrations = new ArrayList<>();
+    ArrayList<ServiceRegistration<?>> featureRegistrations = new ArrayList<>();
     
     /**
      * Service activator. This sets up the service tracker, starts up Jersey
      * and registers a number of features that get used by common applications.
-     * 
-     * @param properties OSGi properties
-     * @param context the {@link BundleContext for this bundle}
+     * @param config - A PublisherConfig
+     * @param context - A BundleContext
      */
     @Activate
-    protected void activate(final Map<String,Object> properties, final BundleContext context) {
+    protected void activate(final PublisherConfig config, final BundleContext context) {
         bundleContext = context;
         
         if (Boolean.valueOf(context.getProperty(INHIBIT_START))) {
-            logger.log(LogService.LOG_ERROR, "JAX-RS Start inhibited");
+            logger.error("JAX-RS Start inhibited");
             System.err.println("JAX-RS Start inhibited");
             return;
         }
         
-        jaxPath = (String) properties.get(PATH);
+        jaxPath = (String) config.path();
         info("JerseyPublisher activating at root %s", jaxPath);
         
         // XXX: is this needed?
@@ -177,7 +178,7 @@ public class JerseyPublisher extends Application implements Publisher {
         } catch (InvalidSyntaxException | NoClassDefFoundError e) {
             // These errors are directly impacted to the optional
             // imports from swagger
-            info("Not enabling swagger at this time");
+            logger.info("Not enabling swagger at this time - ", e);
         }
     }
     
@@ -188,16 +189,14 @@ public class JerseyPublisher extends Application implements Publisher {
      * is for SSE, it is listed as an optional import in the manifest
      * so one may choose not to bring it in, and this should allow the
      * system to run, even without it.
-     * 
-     * @param featureClassSupplier A lambda that returns a class to register
      */
     // This catches Exception because OSGi can make this fail in unusual ways
     private void tryRegisterFeature(final Supplier<Class<?>> featureClassSupplier) {
         try {
-            Object feature = featureClassSupplier.get().newInstance();
-            ServiceRegistration reg = bundleContext.registerService(featureClassSupplier.get().getName(), feature, null);
+            Object feature = featureClassSupplier.get().getDeclaredConstructor().newInstance();
+            ServiceRegistration<?> reg = bundleContext.registerService(featureClassSupplier.get().getName(), feature, null);
             featureRegistrations.add(reg);
-        } catch (NoClassDefFoundError | InstantiationException | IllegalAccessException e) {
+        } catch (NoClassDefFoundError | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             info("Failed to register feature if you don't need it, don't worry: %s",
                     e.getMessage());
         }
@@ -209,6 +208,7 @@ public class JerseyPublisher extends Application implements Publisher {
      */
     private void tryStartSwagger() {
         try {
+            logger.debug("Starting swagger. In tryStartSwagger.");
             // We will search for a service reference that implements swagger
             // this is a loose relation so that we are able to fail easily
             swaggerEndpoint = Optional.ofNullable(bundleContext.getServiceReference(SwaggerEndpoint.class.getName()));
@@ -219,6 +219,7 @@ public class JerseyPublisher extends Application implements Publisher {
                 info("Swagger support enabled");
             }
         } catch (NoClassDefFoundError e) {
+            logger.error("No class def found - ",e);
             // This will happen if we can't resolve the swagger imports
         }
     }
@@ -261,7 +262,7 @@ public class JerseyPublisher extends Application implements Publisher {
      * aka add a new service, remove a service.
      */
     protected void onChange() {
-        if (initialized.get()) {
+        if (initialized.get() && Objects.nonNull(container.getWebComponent())) {
             debug("Reloading configuration");
             container.reload(ResourceConfig.forApplication(this));
             changeWatchers.values().forEach(Runnable::run);
@@ -294,15 +295,15 @@ public class JerseyPublisher extends Application implements Publisher {
     }
    
     private void debug(final String format, final Object...args) {
-        logger.log(LogService.LOG_DEBUG, String.format(format, args));
+        logger.debug(String.format(format, args));
     }
     
     private void info(final String format, final Object...args) {
-        logger.log(LogService.LOG_INFO, String.format(format, args));
+        logger.info(String.format(format, args));
     }
     
     private void error(final Exception e, final String format, final Object...args) {
-        logger.log(LogService.LOG_ERROR, String.format(format, args), e);
+        logger.error(String.format(format, args), e);
     }
     
     @Override
